<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.CalculateActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_insert_photo" />

    <LinearLayout
        android:id="@+id/container_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <Button
            android:id="@+id/btn_cameraX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:backgroundTint="@color/green"
            android:textColor="@color/white"
            android:elevation="2dp"
            android:scaleType="fitCenter"
            android:text="@string/take_image" />

        <Button
            android:id="@+id/btn_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:backgroundTint="@color/green"
            android:textColor="@color/white"
            android:text="@string/gallery" />
    </LinearLayout>

    <TextView
        android:id="@+id/label_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/input_weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/orange"
        app:layout_constraintTop_toBottomOf="@+id/container_camera" />

    <EditText
        android:id="@+id/edt_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/input_weight_ex"
        android:inputType="numberDecimal"
        android:lines="1"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_weight" />

    <LinearLayout
        android:id="@+id/container_carbonEmissions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:transitionName="misc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_weight">

        <TextView
            android:id="@+id/label_carbonEmissions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/const_carbonEmissions"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_carbonEmissions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/result"
            android:textColor="@color/green"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_estimatedProfit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:transitionName="misc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_carbonEmissions">

        <TextView
            android:id="@+id/label_estimatedProfit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/const_estimatedProfit"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_estimatedProfit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/result"
            android:textColor="@color/green"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:transitionName="misc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_estimatedProfit">

        <TextView
            android:id="@+id/label_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/const_category"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/result"
            android:textColor="@color/green"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/green"
        android:textColor="@color/white"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category" />

</androidx.constraintlayout.widget.ConstraintLayout>